# lib-serial

./: README.md
src/serial/: CMakeLists.txt  package.xml
src/serial/include/: blocking_reader.h
src/serial/include/serial/: SerialPort.h  SerialPortBlocking.h
src/serial/src/serial/: SerialPort.cpp  SerialPortBlocking.cpp
